[package]
name = "manta-api"
version = "0.1.0"
authors = ["Manta Network <contact@manta.network>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/Manta-Network/manta-types"
description = "Type definitions for Manta ecosystem"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# Manta Dependencies
manta-asset = { branch = "manta", git = "https://github.com/Manta-Network/manta-types", default-features = false }
manta-crypto = { branch = "manta", git = "https://github.com/Manta-Network/manta-crypto", default-features = false }
manta-data = { branch = "manta", git = "https://github.com/Manta-Network/manta-types", default-features = false }
manta-error = { branch = "manta", git = "https://github.com/Manta-Network/manta-error", default-features = false }

# Arkworks dependencies
ark-ed-on-bls12-381 = { version = "0.2.0", default-features = false, features = [ "r1cs" ] }
ark-bls12-381 = { version = "0.2.0", default-features = false, features = [ "curve" ] }
ark-crypto-primitives = { version = "0.2.0", default-features = false, features = [ "r1cs" ] }
ark-ff = { version = "0.2.0", default-features = false }
ark-std = { version = "0.2.0", default-features = false }
ark-groth16 = { version = "0.2.0", default-features = false, features = [ "r1cs" ] }
ark-r1cs-std = { version = "0.2.0", default-features = false }
ark-relations = { version = "0.2.0", default-features = false }
ark-serialize = { version = "0.2.0", default-features = false, features = [ "derive" ] }

# Additional cryptography dependencies
rand_chacha = { version = "0.2.0", default-features = false }
hkdf = { version = "0.11", default-features = false }
sha2 = { version = "0.9.3", default-features = false }


[features]
default = []
std = []
